# EnvProxy

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  mise.toml
.github/workflows/: ci.yml  release.yml
crates/envproxy-agent/: Cargo.toml
crates/envproxy-agent/src/: config.rs  main.rs  server.rs
crates/envproxy-agent/src/backend/: file.rs  http.rs  kubernetes.rs  mod.rs  vault.rs
crates/envproxy-cli/: Cargo.toml
crates/envproxy-cli/src/: main.rs
crates/envproxy-proto/: Cargo.toml
crates/envproxy-proto/src/: lib.rs
crates/libenvproxy/: Cargo.toml
crates/libenvproxy/src/: lib.rs
examples/: JavaDemo.java  TestJava.java  config.toml  python_demo.py  secrets.json  test_c.c  test_node.mjs  test_python.py
examples/c/: README.md  demo.c
examples/java/: Demo.java  README.md
examples/node/: README.md  demo.mjs
examples/python/: README.md  demo.py  poll.py
java/src/envproxy/: EnvProxyAgent.java  EnvProxyMap.java
k8s/: Dockerfile
k8s/chart/envproxy/: Chart.yaml  values.yaml
k8s/chart/envproxy/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  daemonset.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
k8s/examples/: image-pull-secret.yaml  java-app.yaml  node-app.yaml  python-app.yaml  secret.yaml  vault-app.yaml  vault-policy.hcl
k8s/injector/: Dockerfile  Dockerfile.release  go.mod  go.sum
k8s/injector/cmd/: main.go
k8s/injector/internal/config/: config.go
k8s/injector/internal/registry/: registry.go
k8s/injector/internal/tls/: selfsigned.go
k8s/injector/internal/webhook/: handler.go  mutator.go
python/: _envproxy.pth  _envproxy_hook.py  sitecustomize.py
support/java/: build.sh
support/java/src/envproxy/: EnvProxyMap.java
support/python/: _envproxy_hook.py
