[package]
name = "envproxy-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local daemon that resolves environment variables from configured backends"

[lints]
workspace = true

[features]
default = []
kubernetes = ["kube", "k8s-openapi", "futures"]

[dependencies]
envproxy-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
